--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Your Website 2014</p>
+            <p>Copyright &copy; invenCo 2023</p>
         </div>
     </footer>
 
