--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading"> </h1>
-                        <p class="intro-text">Stock Taking, <br>Simplified.</p>
+                        <h1 class="brand-heading">Stock Taking, <br>Simplified. </h1>
+                        <p class="intro-text">We use AI enabled drones to count<br>inventory for you.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
