--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <h2>About Invenco</h2>
+                <p>At Invenco, we are dedicated to revolutionizing the way businesses perform stock taking. Our drone technology combined with artificial intelligence allows us to offer a fast and efficient way of managing inventory. With our drones, we can capture and analyze data on inventory levels in a fraction of the time it would take with traditional methods. We use state-of-the-art sensors and cameras to navigate through warehouses and capture data on stock levels. Our AI algorithms analyze this data to provide businesses with detailed and accurate reports on their inventory, enabling them to make informed decisions about their inventory management. By utilizing our innovative approach, businesses can save time, reduce costs, and improve their overall efficiency.</p>
+                <!--<p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
+                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p> -->
             </div>
         </div>
     </section>
