--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                     <li>
                         <a class="page-scroll" href="#products">products</a>
                     </li>
-                    <li>
+                    <!--<li>
                         <a class="page-scroll" href="#services">services</a>
-                    </li>
+                    </li> -->
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
@@ -114,7 +114,7 @@
 
     <!-- Services Section 
     <section id="Services" class="content-section text-center">
-        <div class="download-section">
+        <div class="service-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>services</h2>
