--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>InvenCo</title>
+    <title>InvenCo.ai</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -46,7 +46,7 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
+            <div class="collapse navbar-collapse navbar-right navbar-main-collapse" >
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
@@ -131,17 +131,20 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact InvenCo</h2>
                 <p>Feel free to email us to provide some feedback on our products and services, <br> give us suggestions or just to say hello!</p>
-                <p><a href="mailto:mohit.kenia1998@gmail.com">mohit.kenia1998@gmail.com</a>
+                <p><a href="mail to:mohit.kenia1998@gmail.com"><i class="fa fa-envelope fa-fw" aria-hidden="true"></i> mohit.kenia1998@gmail.com</i></a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw" aria-hidden="true"></i> <span class="network-name">Twitter</span></a>
                     </li>
                     <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw" aria-hidden="true"></i> <span class="network-name">Github</span></a>
                     </li>
                     <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Youtube</span></a>
+                        <a href="https://youtube.com/" class="btn btn-default btn-lg"><i class="fa fa-youtube fa-fw " aria-hidden="true"></i> <span class="network-name">Youtube</span></a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw " aria-hidden="true"></i> <span class="network-name">instagram</span></a>
                     </li>
                 </ul>
             </div>
@@ -154,7 +157,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; invenCo 2023</p>
+            <p>Copyright &copy; InvenCo.ai 2023</p>
         </div>
     </footer>
 
