--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                     <li>
                         <a class="page-scroll" href="#products">products</a>
                     </li>
-                    <!--<li>
-                        <a class="page-scroll" href="#services">services</a>
-                    </li> -->
+                    <li>
+                        <a class="page-scroll" href="#team">Team</a>
+                    </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
@@ -90,9 +90,9 @@
 
     <!-- About Section -->
     <section id="about" class="container content-section text-center">
+        <h1>About Invenco</h1>
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Invenco</h2>
                 <p>At Invenco, we are dedicated to revolutionizing the way businesses perform stock taking. Our drone technology combined with artificial intelligence allows us to offer a fast and efficient way of managing inventory. With our drones, we can capture and analyze data on inventory levels in a fraction of the time it would take with traditional methods. We use state-of-the-art sensors and cameras to navigate through warehouses and capture data on stock levels. Our AI algorithms analyze this data to provide businesses with detailed and accurate reports on their inventory, enabling them to make informed decisions about their inventory management. By utilizing our innovative approach, businesses can save time, reduce costs, and improve their overall efficiency.</p>
                 <!--<p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
                 <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p> -->
@@ -102,6 +102,49 @@
 
     <!-- products Section -->
     <section id="products" class="content-section text-center">
+        <div class="container">
+         <h1>Products</h1>
+          <div class="row feature design">
+            <div class="col-sm-4"> <img src="img/feature-img-1.png" alt="Girl in a jacket" width="300" height="200"> </div>
+            <div class="col-sm-4"> <img src="img/feature-img-1.png" alt="Girl in a jacket" width="300" height="200"> </div>
+            <div class="col-sm-4"> <img src="img/feature-img-1.png" alt="Girl in a jacket" width="300" height="200"> </div>
+            <div class="col-sm-4">
+              <h3>Clean and Modern Design.</h3>
+              <p>Lorem ipsum dolor sit amet, ea eum labitur scsstie percipitoleat fabulas complectitur deterruisset at pro. Odio quaeque reformidans est eu, expetendis intellegebat has ut, viderer invenire ut his. Has molestie percipit an. Falli volumus efficiantur sed id, ad vel noster propriae. Ius ut etiam vivendo, graeci iudicabit constituto at mea. No soleat fabulas prodesset vel, ut quo solum dicunt.
+                Nec et amet vidisse mentitumsstie percipitoleat fabulas. </p>
+            </div>
+            <div class="col-sm-4">
+                <h3>Clean and Modern Design.</h3>
+                <p>Lorem ipsum dolor sit amet, ea eum labitur scsstie percipitoleat fabulas complectitur deterruisset at pro. Odio quaeque reformidans est eu, expetendis intellegebat has ut, viderer invenire ut his. Has molestie percipit an. Falli volumus efficiantur sed id, ad vel noster propriae. Ius ut etiam vivendo, graeci iudicabit constituto at mea. No soleat fabulas prodesset vel, ut quo solum dicunt.
+                 Nec et amet vidisse mentitumsstie percipitoleat fabulas. </p>
+            </div>
+            <div class="col-sm-4">
+                <h3>Clean and Modern Design.</h3>
+                <p>Lorem ipsum dolor sit amet, ea eum labitur scsstie percipitoleat fabulas complectitur deterruisset at pro. Odio quaeque reformidans est eu, expetendis intellegebat has ut, viderer invenire ut his. Has molestie percipit an. Falli volumus efficiantur sed id, ad vel noster propriae. Ius ut etiam vivendo, graeci iudicabit constituto at mea. No soleat fabulas prodesset vel, ut quo solum dicunt.
+                 Nec et amet vidisse mentitumsstie percipitoleat fabulas. </p>
+            </div>
+            
+          <!--</div>
+          <div class="row feature responsive">
+            <div class="col-sm-6">
+              <h3>100% Fully Responsive.</h3>
+              <p>Lorem ipsum dolor sit amet, ea eum labitur scripserit, illum complectitur deterruiquaeque reformidans est eu, expetendis intellegebat has ut, viderer invenire ut his. Has molestie percipit an. Falli volumus efficiantur sed id, ad vel noster propriae. Ius ut etiam vivendo, graeci iudicabit constituto at mea. No soleat fabulas prodesset vel, ut quo solum dicunt.
+                ntitum. Cibo mutat nulla eque reformidans est eu, expetendisstie percipitoleat fabulas prodesse quo solum dicuntet amet vidisse mentitum. </p>
+            </div>
+            <div class="col-sm-6"> <img src="img/feature-img-2.png" alt="Girl in a jacket" width="300" height="200"> </div>
+          </div>
+          <div class="row feature cross-browser">
+            <div class="col-sm-6"> <img src="img/feature-img-3.png" alt="Girl in a jacket" width="300" height="200"> </div>
+            <div class="col-sm-6">
+              <h3>Cross-Device/Browser Compatible.</h3>
+              <p>Lorem ipsum dolor sit amet, ea eum labitur scripserit, illum complectitur deterruisset at pro. Odio quaeque reformidans est eu, expetendis intellegebat has ut, viderer invenire ut his. Has molestie percipit an. Falli volumus efficiantur sed id, ad vel noster propriae. Ius ut etiam vivendo, graeci iudicabit constituto at mea. No soleat fabulas prodesset vel, ut quo solum dicunt.
+                Nec et amet vidisse mentitum. Cibo mutat nulla ei eam. </p>
+            </div>
+            
+          </div> -->
+        </div>
+    </section>
+    <!--<section id="products" class="content-section text-center">
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
@@ -110,6 +153,79 @@
                 </div>
             </div>
         </div>
+    </section>-->
+    <!-- Team Section -->
+    <section id="team" class="container content-section text-center">
+        <h1>Our Team</h1>
+        <div class="container">
+            <div class="heading text-center"> 
+            <!-- Heading -->
+            <p>At variations of passages of Lorem Ipsum available, but the majority have suffered alteration..</p>
+            </div>
+            <!-- Team Member's Details -->
+            <div class="team-content">
+            <div class="row">
+                <div class="col-md-3 col-sm-6 col-xs-6"> 
+                <!-- Team Member -->
+                <div class="team-member pDark"> 
+                    <!-- Image Hover Block -->
+                    <div class="member-img"> 
+                    <!-- Image  --> 
+                    <img class="img-responsive" src="img/photo-1.png" alt=""> </div>
+                    <!-- Member Details -->
+                    <h4>Mohit Kenia</h4>
+                    <!-- Designation --> 
+                    <span class="pos"><!--CEO--></1--CEO--></span>
+                    <div class="team-socials"> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-google-plus"></i></a> <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-dribbble"></i></a> <a href="#"><i class="fa fa-github"></i></a> </div>
+                </div>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-6"> 
+                <!-- Team Member -->
+                <div class="team-member pDark"> 
+                    <!-- Image Hover Block -->
+                    <div class="member-img"> 
+                    <!-- Image  --> 
+                    <img class="img-responsive" src="img/photo-2.jpeg" alt=""> </div>
+                    <!-- Member Details -->
+                    <h4>Abhishek Khambhata</h4>
+                    <!-- Designation --> 
+                    <span class="pos"><!--Art Director--></span>
+                    <div class="team-socials"> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-google-plus"></i></a> <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-dribbble"></i></a> <a href="#"><i class="fa fa-github"></i></a> </div>
+                </div>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-6"> 
+                <!-- Team Member -->
+                <div class="team-member pDark"> 
+                    <!-- Image Hover Block -->
+                    <div class="member-img"> 
+                    <!-- Image  --> 
+                    <img class="img-responsive" src="img/photo-3.jpeg" alt=""> </div>
+                    <!-- Member Details -->
+                    <h4>Saurabh Patel</h4>
+                    <!-- Designation --> 
+                    <span class="pos"><!--Manager--></span>
+                    <div class="team-socials"> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-google-plus"></i></a> <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-dribbble"></i></a> <a href="#"><i class="fa fa-github"></i></a> </div>
+                </div>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-6"> 
+                <!-- Team Member -->
+                <div class="team-member pDark"> 
+                    <!-- Image Hover Block -->
+                    <div class="member-img"> 
+                    <!-- Image  --> 
+                    <img class="img-responsive" src="img/photo-4.jpeg" alt=""> </div>
+                    <!-- Member Details -->
+                    <h4>Dyushyant</h4>
+                    <!-- Designation --> 
+                    <span class="pos"><!--Creative--></span>
+                    <div class="team-socials"> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-google-plus"></i></a> <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-dribbble"></i></a> <a href="#"><i class="fa fa-github"></i></a> </div>
+                </div> <br>
+                </div>
+            </div> <br>
+
+            </div> <br>
+        </div>
+        <!--/.container--> <br>
     </section>
 
     <!-- Services Section 
@@ -124,9 +240,58 @@
             </div>
         </div>
     </section> -->
-
     <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
+    <section id="contact" class="contact-parlex">
+        <div class="parlex-back">
+          <div class="container">
+            <div class="row">
+              <div class="heading text-center"> 
+                <!-- Heading -->
+                <h1>Contact Us</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered.</p>
+              </div>
+            </div>
+            <div class="row mrgn30">
+              <form method="post" action="" id="contactfrm" role="form">
+                <div class="col-sm-4">
+                  <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" class="form-control" name="name" id="name" placeholder="Enter name" title="Please enter your name (at least 2 characters)">
+                  </div>
+                  <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Enter email" title="Please enter a valid email address">
+                  </div>
+                </div>
+                <div class="col-sm-4">
+                  <div class="form-group">
+                    <label for="comments">Comments</label>
+                    <textarea name="comment" class="form-control" id="comments" cols="3" rows="5" placeholder="Enter your message…" title="Please enter your message (at least 10 characters)"></textarea>
+                  </div>
+                  <button name="submit" type="submit" class="btn btn-lg btn-primary" id="submit">Submit</button>
+                  <div class="result"></div>
+                </div>
+              </form>
+              <div class="col-sm-4">
+                <h4>Address:</h4>
+                <address>
+                Unbemannt Technologies Pvt Ltd.<br>
+                2nd Floor Kalpapeshi Mahallo<br>
+                Nanpura Surat-395001 INDIA <br>
+                </address>
+                <address>
+                <h4>Phone:</h4>
+                <i class="fa fa-phone " aria-hidden="true"> </i> +91  7066887968 &nbsp;&nbsp; <i class="fa fa-phone " aria-hidden="true"></i>  +91  7016226167 <br>
+                </address>
+              </div>
+            </div>
+          </div>
+          <!--/.container--> 
+        </div>
+    </section>
+
+    <!-- Contact Section -->`
+    <!--<section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact InvenCo</h2>
@@ -149,7 +314,7 @@
                 </ul>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Map Section 
     <div id="map"></div> -->
@@ -157,7 +322,8 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; InvenCo.ai 2023</p>
+            <p>InvenCo.ai 2023</p>
+            <!--<p>Copyright &copy; InvenCo.ai 2023</p> -->
         </div>
     </footer>
 
