--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">InvenCo</span> 
+                <i class="fa fa-qrcode" aria-hidden="true"style="font-size:48px;color:white"><br></i>  <span class="dark">InvenCo</span> 
                 </a>
             </div>
 
@@ -87,7 +87,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Stock Taking,<br>Simplified.</h1>
-                        <p class="intro-text">We use AI enabled drones to count<br>inventory for you.</p>
+                        <p class="intro-text">We use AI enabled drones to count inventory for you.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -114,23 +114,20 @@
         <div class="container">
          <h1>Products</h1>
           <div class="row feature design">
-            <div class="col-sm-4"> <img src="img/feature-img-1.png" alt="Girl in a jacket" width="300" height="200"> </div>
-            <div class="col-sm-4"> <img src="img/feature-img-1.png" alt="Girl in a jacket" width="300" height="200"> </div>
-            <div class="col-sm-4"> <img src="img/feature-img-1.png" alt="Girl in a jacket" width="300" height="200"> </div>
+            <div class="col-sm-4"> <img src="img/barcode.png" alt="Girl in a jacket" width="300" height="200"> </div>
+            <div class="col-sm-4"> <img src="img/uin.jpg" alt="Girl in a jacket" width="300" height="200"> </div>
+            <div class="col-sm-4"> <img src="img/custom.png" alt="Girl in a jacket" width="300" height="200"> </div>
             <div class="col-sm-4">
-              <h3>Clean and Modern Design.</h3>
-              <p>Lorem ipsum dolor sit amet, ea eum labitur scsstie percipitoleat fabulas complectitur deterruisset at pro. Odio quaeque reformidans est eu, expetendis intellegebat has ut, viderer invenire ut his. Has molestie percipit an. Falli volumus efficiantur sed id, ad vel noster propriae. Ius ut etiam vivendo, graeci iudicabit constituto at mea. No soleat fabulas prodesset vel, ut quo solum dicunt.
-                Nec et amet vidisse mentitumsstie percipitoleat fabulas. </p>
+              <h3>Barcodes and <br>QR codes</h3>
+              <p>If your warehouse uses barcodes and QR codes, we will scan them and map the data in a usable format. </p>
             </div>
             <div class="col-sm-4">
-                <h3>Clean and Modern Design.</h3>
-                <p>Lorem ipsum dolor sit amet, ea eum labitur scsstie percipitoleat fabulas complectitur deterruisset at pro. Odio quaeque reformidans est eu, expetendis intellegebat has ut, viderer invenire ut his. Has molestie percipit an. Falli volumus efficiantur sed id, ad vel noster propriae. Ius ut etiam vivendo, graeci iudicabit constituto at mea. No soleat fabulas prodesset vel, ut quo solum dicunt.
-                 Nec et amet vidisse mentitumsstie percipitoleat fabulas. </p>
+                <h3>Unique Identification Number</h3>
+                <p>If your warehouse uses only UIN to label the boxes, our systems can read the text and map the data into already existing WMS. </p>
             </div>
             <div class="col-sm-4">
-                <h3>Clean and Modern Design.</h3>
-                <p>Lorem ipsum dolor sit amet, ea eum labitur scsstie percipitoleat fabulas complectitur deterruisset at pro. Odio quaeque reformidans est eu, expetendis intellegebat has ut, viderer invenire ut his. Has molestie percipit an. Falli volumus efficiantur sed id, ad vel noster propriae. Ius ut etiam vivendo, graeci iudicabit constituto at mea. No soleat fabulas prodesset vel, ut quo solum dicunt.
-                 Nec et amet vidisse mentitumsstie percipitoleat fabulas. </p>
+                <h3>Customization</h3>
+                <p>If your warehouse employs another methods to count the inventory, we can customize our system in accordance to your warehouse. </p>
             </div>
             
           <!--</div>
@@ -180,13 +177,13 @@
                     <!-- Image Hover Block -->
                     <div class="member-img"> 
                     <!-- Image  --> 
-                    <img class="img-responsive" src="img/photo-1.jpeg" alt=""> </div>
+                    <img class="img-responsive" src="img/photo-1.png" alt=""> </div>
                     <!-- Member Details -->
                     <p class ="big"></p>
                     <h4>Mohit Kenia</h4>
                     <!-- Designation --> 
                     <span class="pos"><!--CEO--></1--CEO--></span>
-                    <div class="team-socials"> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-google-plus"></i></a> <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-dribbble"></i></a> <a href="#"><i class="fa fa-github"></i></a> </div>
+                    <!--<div class="team-socials"> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-google-plus"></i></a> <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-dribbble"></i></a> <a href="#"><i class="fa fa-github"></i></a> </div> -->
                 </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-6"> 
@@ -201,7 +198,7 @@
                     <h4>Abhishek Khambhata</h4> 
                     <!-- Designation --> 
                     <span class="pos"><!--Art Director--></span>
-                    <div class="team-socials"> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-google-plus"></i></a> <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-dribbble"></i></a> <a href="#"><i class="fa fa-github"></i></a> </div>
+                    <!--<div class="team-socials"> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-google-plus"></i></a> <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-dribbble"></i></a> <a href="#"><i class="fa fa-github"></i></a> </div> -->
                 </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-6"> 
@@ -216,7 +213,7 @@
                     <h4>Saurabh Patel</h4>
                     <!-- Designation --> 
                     <span class="pos"><!--Manager--></span>
-                    <div class="team-socials"> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-google-plus"></i></a> <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-dribbble"></i></a> <a href="#"><i class="fa fa-github"></i></a> </div>
+                    <!--<div class="team-socials"> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-google-plus"></i></a> <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-dribbble"></i></a> <a href="#"><i class="fa fa-github"></i></a> </div> -->
                 </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-6"> 
@@ -228,10 +225,10 @@
                     <img class="img-responsive" src="img/photo-4.jpeg" alt=""> </div>
                     <!-- Member Details -->
                     <p class ="big"></p>
-                    <h4>Dyushyant</h4>
+                    <h4>Dyushyant Singh</h4>
                     <!-- Designation --> 
                     <span class="pos"><!--Creative--></span>
-                    <div class="team-socials"> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-google-plus"></i></a> <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-dribbble"></i></a> <a href="#"><i class="fa fa-github"></i></a> </div>
+                    <!--<div class="team-socials"> <a href="#"><i class="fa fa-facebook"></i></a> <a href="#"><i class="fa fa-google-plus"></i></a> <a href="#"><i class="fa fa-twitter"></i></a> <a href="#"><i class="fa fa-dribbble"></i></a> <a href="#"><i class="fa fa-github"></i></a> </div> -->
                 </div> <br>
                 </div>
             </div> <br>
@@ -253,13 +250,13 @@
             </div>
         </div>
     </section> -->
-    <!-- Contact Section -->
+    <!-- Contact Section 
     <section id="contact" class="contact-parlex">
         <div class="parlex-back">
           <div class="container">
             <div class="row">
               <div class="heading text-center"> 
-                <!-- Heading -->
+                <!-- Heading 
                 <h1>Contact Us</h1>
                 <p>We are happy to answer all of your questions. Just let us know how we can help by filling in the form below. <br>Our team will get back to you in the shortest possible delay.</p>
               </div>
@@ -307,9 +304,72 @@
               </div>
             </div>
           </div>
+          <!--/.container 
+        </div>
+    </section> -->
+<!----------------------------------------------------------------------------------------------->
+    <!-- Contact Section -->
+    <section id="contact" class="contact-parlex">
+        <div class="parlex-back">
+          <div class="container">
+            <div class="row">
+              <div class="heading text-center"> 
+                <!-- Heading -->
+                <h1>Contact Us</h1>
+                <p>We are happy to answer all of your questions. Just let us know how we can help by filling in the form below. <br>Our team will get back to you in the shortest possible delay.</p>
+              </div>
+            </div>
+            <div class="row mrgn30">
+              <!--<form method="post" action="" id="contactfrm" role="form">
+                <div class="col-sm-4">
+                  <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" class="form-control" name="name" id="name" placeholder="Enter name" title="Please enter your name (at least 2 characters)">
+                  </div>
+                  <div class="form-group">
+                    <label for="email">Your email</label>
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Enter email" title="Please enter a valid email address">
+                  </div>
+                  <div class="form-group">
+                    <label for="company">Company</label>
+                    <input type="text" class="form-control" name="company" id="email" placeholder="Enter Company name" title="Please enter your company name">
+                  </div>
+                  <div class="form-group">
+                    <label for="phone">Phone</label>
+                    <input type="number" class="form-control" name="phone" id="email" placeholder="Enter phone number" title="Please enter a valid phone number">
+                  </div>
+                </div>
+                <div class="col-sm-4">
+                  <div class="form-group">
+                    <label for="comments">Message</label>
+                    <textarea name="comment" class="form-control" id="comments" cols="3" rows="9" placeholder="Let us know how we can help you…" title="Please enter your message (at least 10 characters)"></textarea>
+                  </div>
+                  <button name="submit" type="submit" class="btn btn-lg btn-primary" id="submit" formaction=" " value="save" onClick=saving()>Submit</button>
+                  <div class="result"></div>
+                </div>
+              </form> -->
+              <div class="col-sm-6">
+                <h3>Address:</h3>
+                <address>
+                <p class="big"p>
+                Unbemannt Technologies Pvt Ltd.<br>
+                2nd Floor Kalpapeshi Mahallo<br>
+                Nanpura Surat-395001 INDIA <br></p>
+                </address>
+              </div>
+              <div class="col-sm-6">
+                <address>
+                <h3>Phone:</h3>
+                <p class="big" p>
+                <i class="fa fa-phone " aria-hidden="true"> </i> +91  7066887968 &nbsp;&nbsp; <i class="fa fa-phone " aria-hidden="true"></i>  +91  7016226167 <br> </p>
+                </address>
+              </div>
+            </div>
+          </div>
           <!--/.container--> 
         </div>
     </section>
+
 
     <!-- Contact Section -->`
     <!--<section id="contact" class="container content-section text-center">
