--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
               <div class="heading text-center"> 
                 <!-- Heading -->
                 <h1>Contact Us</h1>
-                <p>We are happy to answer all of your questions. Just let us know how we can help by filling in the form below. <br>Our team will get back to you in the shortest possible delay.</p>
+                <p>We are happy to answer all of your questions. Just let us know how we can help. <!-- <br>Our team will get back to you in the shortest possible delay.--></p>
               </div>
             </div>
             <div class="row mrgn30">
