--- a/index.html
+++ b/index.html
@@ -353,8 +353,8 @@
                 <address>
                 <p class="big"p>
                 Unbemannt Technologies Pvt Ltd.<br>
-                2nd Floor Kalpapeshi Mahallo<br>
-                Nanpura Surat-395001 INDIA <br></p>
+                1/1116, Utkarsh Kalapeshi street<br>
+                Nanpura,Surat-395001 INDIA <br></p>
                 </address>
               </div>
               <div class="col-sm-6">
