--- a/img/clients/bkp/index.html
+++ b/img/clients/bkp/index.html
@@ -80,7 +80,7 @@
         <!-- /.container -->
     </nav>
 
-<!--         Intro Header        -->
+    <!-- Intro Header -->
     <header class="intro">
         <div class="intro-body">
             <div class="container">
@@ -97,7 +97,7 @@
         </div>
     </header>
 
-<!--         About Section      -->
+    <!-- About Section -->
     <section id="about" class="container content-section text-center">
         <h1>About Invenco</h1>
         <div class="row">
@@ -109,7 +109,7 @@
         </div>
     </section>
 
-<!--        products Section         -->
+    <!-- products Section -->
     <section id="products" class="content-section text-center">
         <div class="container">
          <h1>Products</h1>
@@ -150,8 +150,17 @@
           </div> -->
         </div>
     </section>
-
-<!--        Team Section        -->
+    <!--<section id="products" class="content-section text-center">
+        <div class="download-section">
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h2> Products & Services</h2>
+                    <p>we are updating our product line.</p>
+                </div>
+            </div>
+        </div>
+    </section>-->
+    <!-- Team Section -->
     <section id="team" class="container content-section text-center">
         <h1>Our Team</h1>
         <div class="container">
@@ -229,7 +238,77 @@
         <!--/.container--> <br>
     </section>
 
-<!--        Contact Section      -->
+    <!-- Services Section 
+    <section id="Services" class="content-section text-center">
+        <div class="service-section">
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h2>services</h2>
+                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
+                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                </div>
+            </div>
+        </div>
+    </section> -->
+    <!-- Contact Section 
+    <section id="contact" class="contact-parlex">
+        <div class="parlex-back">
+          <div class="container">
+            <div class="row">
+              <div class="heading text-center"> 
+                <!-- Heading 
+                <h1>Contact Us</h1>
+                <p>We are happy to answer all of your questions. Just let us know how we can help by filling in the form below. <br>Our team will get back to you in the shortest possible delay.</p>
+              </div>
+            </div>
+            <div class="row mrgn30">
+              <form method="post" action="" id="contactfrm" role="form">
+                <div class="col-sm-4">
+                  <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" class="form-control" name="name" id="name" placeholder="Enter name" title="Please enter your name (at least 2 characters)">
+                  </div>
+                  <div class="form-group">
+                    <label for="email">Your email</label>
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Enter email" title="Please enter a valid email address">
+                  </div>
+                  <div class="form-group">
+                    <label for="company">Company</label>
+                    <input type="text" class="form-control" name="company" id="email" placeholder="Enter Company name" title="Please enter your company name">
+                  </div>
+                  <div class="form-group">
+                    <label for="phone">Phone</label>
+                    <input type="number" class="form-control" name="phone" id="email" placeholder="Enter phone number" title="Please enter a valid phone number">
+                  </div>
+                </div>
+                <div class="col-sm-4">
+                  <div class="form-group">
+                    <label for="comments">Message</label>
+                    <textarea name="comment" class="form-control" id="comments" cols="3" rows="9" placeholder="Let us know how we can help you…" title="Please enter your message (at least 10 characters)"></textarea>
+                  </div>
+                  <button name="submit" type="submit" class="btn btn-lg btn-primary" id="submit" formaction=" " value="save" onClick=saving()>Submit</button>
+                  <div class="result"></div>
+                </div>
+              </form>
+              <div class="col-sm-4">
+                <h4>Address:</h4>
+                <address>
+                Unbemannt Technologies Pvt Ltd.<br>
+                2nd Floor Kalpapeshi Mahallo<br>
+                Nanpura Surat-395001 INDIA <br>
+                </address>
+                <address>
+                <h4>Phone:</h4>
+                <i class="fa fa-phone " aria-hidden="true"> </i> +91  7066887968 &nbsp;&nbsp; <i class="fa fa-phone " aria-hidden="true"></i>  +91  7016226167 <br>
+                </address>
+              </div>
+            </div>
+          </div>
+          <!--/.container 
+        </div>
+    </section> -->
+<!----------------------------------------------------------------------------------------------->
+    <!-- Contact Section -->
     <section id="contact" class="contact-parlex">
         <div class="parlex-back">
           <div class="container">
@@ -291,10 +370,37 @@
         </div>
     </section>
 
-<!--         Map Section 
+
+    <!-- Contact Section -->`
+    <!--<section id="contact" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Contact InvenCo</h2>
+                <p>Feel free to email us to provide some feedback on our products and services, <br> give us suggestions or just to say hello!</p>
+                <p><a href="mailto:mohit.kenia1998@gmail.com"><i class="fa fa-envelope fa-fw" aria-hidden="true"></i> mohit.kenia1998@gmail.com</i></a>
+                </p>
+                <ul class="list-inline banner-social-buttons">
+                    <li>
+                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw" aria-hidden="true"></i> <span class="network-name">Twitter</span></a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw" aria-hidden="true"></i> <span class="network-name">Github</span></a>
+                    </li>
+                    <li>
+                        <a href="https://youtube.com/" class="btn btn-default btn-lg"><i class="fa fa-youtube fa-fw " aria-hidden="true"></i> <span class="network-name">Youtube</span></a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw " aria-hidden="true"></i> <span class="network-name">instagram</span></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section> -->
+
+    <!-- Map Section 
     <div id="map"></div> -->
 
-<!--        Footer      -->
+    <!-- Footer -->
     <footer>
         <div class="container text-center">
             <p class="small">powered by InvenCo.ai 2023</p>
