updated team description

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <!--        products Section         -->
     <section id="products" class="content-section text-center">
         <div class="container">
-         <h1>Products</h1>
+         <h1>Services</h1>
           <div class="row feature design">
             <div class="col-sm-4"> <img src="img/barcode.png" alt="Girl in a jacket" width="300" height="200"> </div>
             <div class="col-sm-4"> <img src="img/uin.jpg" alt="Girl in a jacket" width="300" height="200"> </div>
@@ -157,7 +157,9 @@
         <div class="container">
             <div class="heading text-center"> 
             <!-- Heading -->
-            <p>At variations of passages of Lorem Ipsum available, but the majority have suffered alteration..</p>
+            <!-- <p>A team of experienced technology experts who work hard for you, our customers, to ensure the best solutions for warehouse automation.<br> -->
+
+            <p>Meet the people who make it happen.</p>
             </div>
             <!-- Team Member's Details -->
             <div class="team-content">
