--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@
 
 <!--        Team Section        -->
     <section id="team" class="container content-section text-center">
-        <h1>Our Team</h1>
+        <h1>MEET THE PEOPLE WHO MAKE IT HAPPEN</h1>
         <div class="container">
             <div class="heading text-center"> 
             <!-- Heading -->
             <!-- <p>A team of experienced technology experts who work hard for you, our customers, to ensure the best solutions for warehouse automation.<br> -->
 
-            <p>Meet the people who make it happen.</p>
+            <p> </p>
             </div>
             <!-- Team Member's Details -->
             <div class="team-content">
