--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, maximum-scale=1">
+    <meta name="description" content="invenco-ai.in">
+    <meta name="author" content="Mohit Kenia">
 
-    <title>InvenCo.ai</title>
+    <title>InvenCo-Ai: Warehouse Drones for stocktaking and inventory management.</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                <i class="fa fa-qrcode" aria-hidden="true"style="font-size:48px;color:white"><br></i>  <span class="dark">InvenCo</span> 
+                <i class="fa fa-qrcode" aria-hidden="true"style="font-size:48px;color:white"><br></i>  <span class="dark">InvenCo-Ai</span> 
                 </a>
             </div>
 
@@ -77,7 +77,7 @@
 <!--         Intro Header        -->
     <header class="intro">
         <div class="intro-body">
-            <div class="container">
+            <div class="container" >
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Stock Taking,<br>Simplified.</h1>
